Fixing entitie and DTO constraints and controller methods